<resources>
    <string name="app_name">Blue Square Speedometer</string>
    <string name="app_source_code_url" translatable="false">https://github.com/nhirokinet/bluesquarespeedometer</string>

    <string name="permission_location_no">No Location Permission Granted</string>
    <string name="permission_location_coarse">Only Coarse Location Granted</string>
    <string name="permission_location_fine">Fine Location Granted</string>
    <string name="permission_location_grant_prompt">Grant location permission</string>
    <string name="permission_location_description">This app is speedometer based on device location service, so fine location permission is necessary.</string>

    <string name="error_soft_location_not_enabled">Location system is not enabled now.</string>
    <string name="error_soft_location_provider_not_enabled">Location provider \"%1$s\" is not enabled now.</string>

    <string name="menu_this_app_digital_speedometer_fullscreen">Digital Speedometer (fullscreen)</string>
    <string name="menu_this_app_licensing_information">License information</string>

    <string name="metrics_speed">Speed</string>
    <string name="metrics_altitude">Altitude</string>
    <string name="metrics_msl_altitude">MSL Altitude</string>
    <string name="metrics_wgs84_altitude">WGS84 Altitude</string>
    <string name="metrics_accuracy">Accuracy</string>
    <string name="metrics_msl_altitude_accuracy">MSL Altitude Accuracy</string>
    <string name="metrics_info_time">Info Time</string>
    <string name="metrics_barometric_pressure">Barometric pressure</string>
    <string name="metrics_pressure_altitude_qne">Pressure altitude (QNE)</string>
    <string name="metrics_pressure_sea_level">Sea-level pressure</string>

    <string name="unit_km_per_hour">km/h</string>
    <string name="unit_knot">kn</string>
    <string name="unit_meter_per_second">m/s</string>
    <string name="unit_mile_per_hour">mph</string>
    <string name="unit_meters">m</string>
    <string name="unit_meters_per_minute">m/min</string>
    <string name="unit_feet">ft</string>
    <string name="unit_feet_per_minute">ft/min</string>
    <string name="unit_angle_deg">%1$d°%2$02d\'%3$02d.%4$01d\"</string>
    <string name="unit_hpa">hPa</string>
    <string name="unit_inhg">inHg</string>

    <string name="dialog_select_location_provider">Select location provider</string>
    <string name="dialog_select_speed_unit">Select speed unit</string>
    <string name="dialog_select_altitude_unit">Select altitude unit</string>
    <string name="dialog_select_air_pressure_unit">Select air pressure unit</string>

    <string name="config_location_provider">Location provider</string>
    <string name="config_speed_unit">Speed unit</string>
    <string name="config_altitude_unit">Altitude unit</string>
    <string name="config_air_pressure_unit">Air pressure unit</string>

    <string name="coordinate_display_north">N</string>
    <string name="coordinate_display_south">S</string>
    <string name="coordinate_display_east">E</string>
    <string name="coordinate_display_west">W</string>

    <string name="general_caption_unset">(Not set)</string>
    <string name="general_button_change">Change</string>
    <string name="general_button_retry">Retry</string>

    <string name="licensing_source_code_header">Source code</string>

    <!-- Licensing information, untranslatable not to make slightest difference -->
    <string name="licensing_notice_header" translatable="false">License information</string>
    <string name="licensing_notice_body" translatable="false">
        Blue Square Speedometer is licensed under the Apache License, Version 2.0.
        \n
        \nBlue Square Speedometer contains code from the following libraries, which the Apache License, Version 2.0, is applied to.
        \n
        \n- Android Jetpack
        \n- JetBrains Java Annotations
        \n- Kotlin Stdlib
        \n- Coroutines support libraries for Kotlin
        \n- kotlinx-coroutines-android
        \n- Google Guava
        \n- JSpecify
    </string>

    <!-- Legal English texts -->
    <string name="license_apache_license_v2.0_name" translatable="false">Apache License, Version 2.0</string>
</resources>
