<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="?backgroundColor"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp"
        >
        <LinearLayout
            android:id="@+id/main_activity_permission_location_not_granted"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="3sp"
            android:background="?alertBackgroundColor"
            >
            <TextView
                android:text="@string/permission_location_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?baseTextColor"
                />
            <Button
                android:id="@+id/main_activity_grant_location_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/permission_location_grant_prompt"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/main_activity_location_not_enabled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:padding="3sp"
            android:background="?alertBackgroundColor"
            >
            <TextView
                android:id="@+id/main_activity_location_not_enabled_message"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?baseTextColor"
                />
            <Button
                android:id="@+id/main_activity_refresh_location_provider_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/general_button_retry"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginVertical="4sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metrics_speed"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom|end"
            >
            <TextView
                android:id="@+id/main_activity_speed_digits_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:textColor="?baseTextColor"
                android:fontFamily="monospace"
                android:paddingEnd="30sp"
                />
            <TextView
                android:id="@+id/main_activity_speed_unit_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginVertical="4sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metrics_distance_since_gas_refill"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom|end"
            >
            <TextView
                android:id="@+id/main_activity_distance_since_gas_refill_digits_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:textColor="?baseTextColor"
                android:fontFamily="monospace"
                android:paddingEnd="30sp"
                />
            <TextView
                android:id="@+id/main_activity_distance_since_gas_refill_units_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginVertical="4sp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metrics_total_distance"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom|end"
            >
            <TextView
                android:id="@+id/main_activity_total_distance_digits_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:textColor="?baseTextColor"
                android:fontFamily="monospace"
                android:paddingEnd="30sp"
                />
            <TextView
                android:id="@+id/main_activity_total_distance_units_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginVertical="4sp"
            />
        <TextView
            android:id="@+id/main_activity_altitude_caption_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/metrics_altitude"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="bottom|end"
            >
            <TextView
                android:id="@+id/main_activity_altitude_digits_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="60sp"
                android:fontFamily="monospace"
                android:textColor="?baseTextColor"
                android:paddingEnd="30sp"
                />
            <TextView
                android:id="@+id/main_activity_altitude_unit_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginVertical="4sp"
            />
        <TextView
            android:id="@+id/main_activity_current_coordinate_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="?baseTextColor"
            android:fontFamily="monospace"
            />
        <TextView
            android:id="@+id/main_activity_geolocation_detail_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?baseTextColor"
            android:fontFamily="monospace"
            />
        <TextView
            android:id="@+id/main_activity_permission_status_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?baseTextColor"
            android:fontFamily="monospace"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginVertical="4sp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/config_location_provider"
                    />
                <TextView
                    android:id="@+id/main_activity_config_location_provider_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?baseTextColor"
                    />
            </LinearLayout>
            <Space
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/main_activity_change_provider_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/general_button_change"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/config_speed_unit"
                    />
                <TextView
                    android:id="@+id/main_activity_config_speed_unit_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?baseTextColor"
                    />
            </LinearLayout>
            <Space
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/main_activity_speed_unit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/general_button_change"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/config_altitude_unit"
                    />
                <TextView
                    android:id="@+id/main_activity_config_altitude_unit_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?baseTextColor"
                    />
            </LinearLayout>
            <Space
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/main_activity_altitude_unit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/general_button_change"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/config_distance_before_gas_warning"
                    />
                <TextView
                    android:id="@+id/main_activity_config_gas_warning_distance_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?baseTextColor"
                    />
            </LinearLayout>
            <Space
                android:layout_width="1dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                />
            <Button
                android:id="@+id/main_activity_gas_warning_reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/general_button_reset"
                android:backgroundTint="@color/buttonResetBackgroud"
                />
            <Button
                android:id="@+id/main_activity_gas_warning_distance_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:text="@string/general_button_change"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginVertical="4sp"
            />
        <LinearLayout
            android:id="@+id/main_activity_links_to_direct_meters"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <Button
                android:id="@+id/main_activity_meter_car1_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/menu_this_app_digital_speedometer_fullscreen"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="3dp"
                android:background="@color/colorAccent"
                android:layout_marginVertical="4sp"
                />
        </LinearLayout>
        <Button
            android:id="@+id/main_activity_licensing_information_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/menu_this_app_licensing_information"
            />
        <TextView
            android:text="@string/app_name"
            android:id="@+id/main_activity_version_info_footer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="@color/colorAccent"
            android:layout_marginVertical="4sp"
            />
    </LinearLayout>
</ScrollView>